<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/rmb"
        android:hint="@string/rmb_hint"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/showrlt"
        android:hint="@string/rmb_0"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_Dollar"
        android:text="@string/btn_Dollar_label"
        android:onClick="OnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_Pound"
        android:text="@string/btn_Pound_label"
        android:onClick="OnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_Yen"
        android:text="@string/btn_Yen_label"
        android:onClick="OnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_HK"
        android:text="@string/btn_HK_label"
        android:onClick="OnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
    android:id="@+id/btn_config"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:onClick="openAnother"
    android:text="@string/btn_config" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="call"
        android:text="@string/btn_calll_lable" />
</LinearLayout>